fix(css): improve search highlight color (#66)
* fix(website): contrast of search highlight color in dark mode was too high

* fix(website): hit marker contrast was too low in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,6 +27,13 @@ html[data-theme='dark'] {
   --ifm-footer-background-color: #333333;
   --ifm-code-background: #333333;
   --ifm-navbar-search-input-background-color: #666666;
+  
+  --search-local-highlight-color: #4d4d4d;
+}
+
+html[data-theme='dark'] .hitWrapper_sAK8 mark {
+  background: none;
+  color: #ccc;
 }
 
 .docusaurus-highlight-code-line {
